--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.4",
     "@material-tailwind/react": "^2.1.9",
+    "@vercel/postgres": "^0.9.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
