--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
     "@material-tailwind/react": "^2.1.9",
+    "@prisma/client": "^5.16.1",
     "@vercel/postgres": "^0.9.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "postcss": "^8",
+    "prisma": "^5.16.1",
     "tailwindcss": "^3.4.1"
   }
 }
