--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.16.1",
     "@vercel/postgres": "^0.9.0",
+    "bcrypt": "^5.1.1",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "postcss": "^8",
