--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@prisma/client": "^5.16.1",
     "@vercel/postgres": "^0.9.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
