--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/postgres": "^0.9.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "deepl-node": "^1.13.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
